# Gen-AI-RAG-QnA-Chatbot

./: README.md
backend/: main.py  pyproject.toml
backend/data/: faq.csv
backend/src/: app.py
backend/workbooks/: test1.ipynb
frontend/src/: App.css  App.jsx
frontend/src/components/Button/: Button.css  Button.jsx
frontend/src/components/SearchBar/: SearchBar.css  SearchBar.jsx
